--- a/roles/ceph-osd/tasks/scenarios/lvm-batch.yml
+++ b/roles/ceph-osd/tasks/scenarios/lvm-batch.yml
@@ -13,6 +13,7 @@
     block_db_devices: "{{ dedicated_devices | unique if dedicated_devices | length > 0 else omit }}"
     wal_devices: "{{ bluestore_wal_devices | unique if bluestore_wal_devices | length > 0 else omit }}"
     journal_devices: "{{ dedicated_devices | unique if dedicated_devices | length > 0 else omit }}"
+    block_wal_auto: "{{ block_wal_auto|default(omit) }}"
     action: "batch"
   environment:
     CEPH_VOLUME_DEBUG: 1
