--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -84,6 +84,10 @@ dummy:
 ############
 #debian_package_dependencies: []
 
+# Spectra: 
+# debian_update_cache is not configured for all uses of "update_cache:" 
+#debian_update_cache: true
+
 #centos_package_dependencies:
 #  - epel-release
 #  - "{{ 'python3-libselinux' if ansible_distribution_major_version | int >= 8 else 'libselinux-python' }}"
