--- a/roles/ceph-infra/tasks/main.yml
+++ b/roles/ceph-infra/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: update cache for Debian based OSs
   apt:
-    update_cache: yes
+    update_cache: "{{ debian_update_cache }}"
   when: ansible_os_family == "Debian"
   register: result
   until: result is succeeded
