Add ability to disable the update of the debian cache.
The variable debian_update_cache was added and defaulted to true;
this new variable is used remove some of the hardcoded usages of:
	update_cache: yes
which were replaced with:
	update_cache: "{{ debian_update_cache }}"

In order to minimize Spectra specific changes to ceph-ansible, not
all uses of "update_cache: yes" were modified.

modified: group_vars/all.yml.sample
- Document the debian_update_cache and its default value.

modified: roles/ceph-defaults/defaults/main.yml
- Set the debian_update_cache default to true

modified: roles/ceph-infra/tasks/main.yml
- Modify "update_cache: yes" as described above

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -82,6 +82,10 @@ dummy:
 ############
 #debian_package_dependencies: []
 
+# Spectra: 
+# debian_update_cache is not configured for all uses of "update_cache:" 
+#debian_update_cache: true
+
 #centos_package_dependencies:
 #  - epel-release
 #  - libselinux-python
