--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -74,6 +74,11 @@ ceph_conf_local: false
 ############
 debian_package_dependencies: []
 
+# Spectra:
+# debian_update_cache is not configured for all uses of "update_cache:"
+debian_update_cache: true
+
+
 centos_package_dependencies:
   - epel-release
   - libselinux-python
